# robius

./: CLAUDE.md  Cargo.toml  LICENSE
crates/authentication/: Cargo.toml  README.md  build.rs
crates/authentication/examples/: org.robius.authentication.policy  simple_authentication.rs
crates/authentication/src/: error.rs  lib.rs  text.rs
crates/authentication/src/sys/: apple.rs  unsupported.rs
crates/authentication/src/sys/android/: AuthenticationCallback.java  callback.rs  mod.rs
crates/authentication/src/sys/linux/: mod.rs
crates/authentication/src/sys/windows/: fallback.rs  mod.rs
crates/camera/: Cargo.toml  README.md  build.rs
crates/camera/examples/: simple_capture.rs
crates/camera/src/: error.rs  lib.rs  sys.rs
crates/camera/src/sys/: ios.rs  unsupported.rs  windows.rs
crates/camera/src/sys/android/: CameraResultCallback.java  callback.rs  mod.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs
crates/directories/: Cargo.toml  README.md
crates/directories/src/: android.rs  lib.rs
crates/examples/: Cargo.toml  README.md
crates/file-picker/: Cargo.toml  README.md  build.rs
crates/file-picker/src/: error.rs  lib.rs  sys.rs
crates/file-picker/src/sys/: desktop.rs  unsupported.rs
crates/file-picker/src/sys/android/: FilePickerFragment.java  callback.rs  mod.rs
crates/file-picker/src/sys/ios/: mod.rs
crates/location/: Cargo.toml  README.md  build.rs
crates/location/src/: lib.rs
crates/location/src/sys/: unsupported.rs  windows.rs
crates/location/src/sys/android/: LocationCallback.java  LocationPermissionFragment.java  callback.rs  mod.rs
crates/location/src/sys/apple/: delegate.rs  mod.rs
crates/notifications/: Cargo.toml  README.md  build.rs
crates/notifications/src/: error.rs  lib.rs
crates/notifications/src/sys/: linux.rs  unsupported.rs  windows.rs
crates/notifications/src/sys/android/: NotificationPermissionFragment.java  Notifications.java  class.rs  mod.rs
crates/notifications/src/sys/apple/: communication.rs  delegate.rs  mod.rs
crates/open/: Cargo.toml  README.md
crates/open/src/: lib.rs
crates/open/src/sys/: android.rs  ios.rs  linux.rs  macos.rs
crates/proxy/: Cargo.toml  README.md
crates/proxy/examples/: show_current.rs
crates/proxy/src/: error.rs  lib.rs  sys.rs
crates/proxy/src/sys/: macos.rs  unsupported.rs
crates/share/: Cargo.toml  README.md  TESTING.md  build.rs
crates/share/examples/: share_example.rs
crates/share/src/: error.rs  lib.rs  sys.rs
crates/share/src/sys/: linux.rs  macos.rs  unsupported.rs  windows.rs
crates/share/src/sys/android/: ShareSheet.java  class.rs  mod.rs
crates/share/src/sys/ios/: mod.rs
crates/share/src/sys/linux/: dbus.rs
crates/web_auth_session/: Cargo.toml  README.md
crates/web_auth_session/src/: error.rs  lib.rs  sys.rs
crates/web_auth_session/src/sys/: ios.rs  unsupported.rs
examples/example-share-sheet/: Cargo.toml  README.md
examples/example-share-sheet/src/: main.rs
