[package]
name        = "robius-directories"
version     = "6.0.0"
authors     = [
    "Simon Ochsenreither <simon@ochsenreither.de>",
    "Kevin Boos <kevinaboos@gmail.com>",
    "Klim Tsoutsman <klim@tsoutsman.com>",
]
description = """
Abstraction over platform-standard locations of directories for app-specific data, config, cache, and more.
Supports Linux (XDG spec), Windows (Known Folders), macOS and iOS (Standard Directory), and Android (via robius-android-env).
This crate is a fork of the (now-archived) `directories` crate, with support for Android.
"""
edition     = "2015"
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/project-robius/robius"
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]

[dependencies]
dirs-sys = "0.5.0"

[target.'cfg(target_os = "android")'.dependencies]
robius-android-env.workspace = true
jni.workspace = true

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "constructors"
harness = false
